--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -8,6 +8,13 @@ android {
             storeFile file('../wfc.keystore')
             storePassword 'wildfirechat'
         }
+
+        duck{
+            keyAlias 'duck_key0'
+            keyPassword 'cj.236675.com....'
+            storeFile file('../duck.jks')
+            storePassword 'cj.236675.com....'
+        }
     }
     compileSdkVersion 28
     aaptOptions.cruncherEnabled = false
@@ -36,12 +43,19 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "API_HOST", "\"https://www.xuniuwang.com\"")
+//https://www.xuniuwang.com
+            buildConfigField("boolean", "openSec", "true")
+            buildConfigField("String", "appKey", "\"272NlVF52ahN6GEw6Ba2W77A08r2001S6wdNDnM4gOu767h9GP6Y49IfR79519i4\"")
             signingConfig signingConfigs.wfc
         }
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.wfc
+            buildConfigField("String", "API_HOST", "\"http://30.52.96.103\"")//183.134.65.78
+            buildConfigField("boolean", "openSec", "true")
+            buildConfigField("String", "appKey", "\"27h9GP6Y49IfR76Ba295A001S6wdNDnM4gOu7608r19i4272NlVF52ahN6GEwW77\"")
+            signingConfig signingConfigs.duck
         }
     }
     compileOptions {
@@ -109,5 +123,16 @@ dependencies {
     implementation 'com.tencent.bugly:nativecrashreport:3.6.0.1'
 
     implementation 'com.king.zxing:zxing-lite:1.1.1'
+
+    implementation "com.squareup.retrofit2:retrofit:2.3.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+    implementation "com.squareup.retrofit2:retrofit-mock:2.3.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.9.0"
+
+    // EventBus
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
+    // 微信支付，登录，分享SDK
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.3.1'
 
 }
