--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -16,13 +16,13 @@ android {
             storePassword 'cj.236675.com....'
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 29
     aaptOptions.cruncherEnabled = false
     aaptOptions.useNewCruncher = false
     defaultConfig {
         applicationId "cn.wildfirechat.chat"
         minSdkVersion 16
-        targetSdkVersion 28 //当targetversion大于23时，需要使用fileprovider
+        targetSdkVersion 29 //当targetversion大于23时，需要使用fileprovider
         versionCode 13
         versionName "0.5.5"
         multiDexEnabled true
@@ -51,8 +51,9 @@ android {
         }
         debug {
             minifyEnabled false
+            debuggable true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField("String", "API_HOST", "\"http://30.52.96.103\"")//183.134.65.78
+            buildConfigField("String", "API_HOST", "\"http://192.168.1.106\"")//183.134.65.78
             buildConfigField("boolean", "openSec", "true")
             buildConfigField("String", "appKey", "\"27h9GP6Y49IfR76Ba295A001S6wdNDnM4gOu7608r19i4272NlVF52ahN6GEwW77\"")
             signingConfig signingConfigs.duck
@@ -93,10 +94,12 @@ dependencies {
     implementation 'com.jaeger.statusbaruitl:library:1.3.5'
     implementation 'com.kyleduo.switchbutton:library:1.4.4'
     implementation 'com.lovedise:permissiongen:0.0.6'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.squareup.okio:okio:1.14.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    implementation 'com.squareup.okio:okio:1.15.0'
+
     implementation 'com.jakewharton:butterknife:7.0.1'
+
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
@@ -119,8 +122,8 @@ dependencies {
     implementation project(':emojilibrary')
     implementation project(':imagepicker')
 
-    implementation 'com.tencent.bugly:crashreport:2.8.6.0'
-    implementation 'com.tencent.bugly:nativecrashreport:3.6.0.1'
+    implementation 'com.tencent.bugly:crashreport:3.0.1'
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
 
     implementation 'com.king.zxing:zxing-lite:1.1.1'
 
